# experimentos_faciais

./: .gitignore  LICENSE  README.md
apresentacoes/: detectar_pontos_faciais_opencv.odp
detectar_pontos_faciais_dlib/: CMakeLists.txt  README.md  detectar_pontos_faciais_sp.cpp  detectar_pontos_faciais_sp.hpp  main.cpp
detectar_pontos_faciais_opencv/: CMakeLists.txt  README.md  detectar_olhos.hpp  detectar_pontos_faciais_aam.cpp  detectar_pontos_faciais_aam.hpp  detectar_pontos_faciais_kazemi.cpp  detectar_pontos_faciais_lbf.cpp  main.cpp  utils.cpp  utils.hpp
extra/: README.md
identificar_piscada/: CMakeLists.txt  README.md  detectar_olhos.cpp  detectar_olhos.hpp  detectar_pontos_faciais_aam.cpp  detectar_pontos_faciais_kazemi.hpp  detectar_pontos_faciais_lbf.cpp  detectar_pontos_faciais_lbf.hpp  detectar_pontos_faciais_sp.cpp  detectar_pontos_faciais_sp.hpp  detectar_rosto.cpp  detectar_rosto.hpp  main.cpp  piscadas_facemark_aam.cpp  piscadas_facemark_aam.hpp  piscadas_facemark_kazemi.cpp  piscadas_facemark_kazemi.hpp  piscadas_facemark_lbf.cpp  piscadas_facemark_lbf.hpp  utils.cpp  utils.hpp
imagens/: detecao_pontos_faciais_opencv.ogv  pontosfaciais.xcf
